--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": ".backend",
+  "name": "backend",
   "version": "0.1.0",
   "bin": {
-    ".backend": "bin/.backend.js"
+    "backend": "bin/backend.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
+    "build:deploy": "npm run build && cdk synth && cdk deploy",
+    "build:diff": "npm run build && cdk diff",
     "cdk": "cdk"
   },
   "devDependencies": {
@@ -16,6 +18,7 @@
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "aws-cdk": "2.8.0",
+    "aws-sdk": "^2.834.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
